<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.max.usingmenu.MainActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/program_menu"
        android:id="@+id/button_program_menu"
        android:layout_gravity="center_horizontal"
        android:onClick="openDemoActivity"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/using_xml_file"
        android:id="@+id/button_xml_menu"
        android:onClick="openDemoActivity"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/context_menu"
        android:id="@+id/button_context_menu"
        android:onClick="openDemoActivity"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_menu"
        android:id="@+id/button_popup_menu"
        android:onClick="openDemoActivity"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_menu"
        android:id="@+id/button_group_menu"
        android:onClick="openDemoActivity"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
